--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -137,20 +137,20 @@
 }
 .container4 .timeContainer .timeTop .whenSelect p{
     cursor: pointer;
-    border: 1px solid #f8a247;
-    border-radius: 5px;
-    padding: 5px ;
 }
-.container4 .timeContainer .timeTop .whenSelect p:hover{
-    background-color: #f8a247;
-    color: #fff;
+.container4 .timeContainer .timeTop .whenSelect p::before{
+    content: '';
+    background: url('@/assets/images/back.png') no-repeat;
+    background-size: contain;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    padding-right: 5px;
 }
 
 /* 스케쥴 등록 */
 .container4 .timeContainer .insertScheduleContainer {
     padding: 10px;
-     /*여기 나중에 풀기*/
-    /* display: none; */
     /* background-color: tan; */
 }
 
@@ -217,7 +217,7 @@
 }
 
 .container4 .timeContainer .insertScheduleContainer .selectWorkTime .selectWorkDay.active {
-    background-color: #237140 ; 
+    background-color: #153448 ; 
     color: #fff;
     font-weight: bold;
 }
@@ -289,14 +289,24 @@
     border: none;
     border-radius: 10px;
     margin: 5px 10px 5px 0;
-    background-color: #f8a247;
+    background-color: #153448 ;
     font-size: 15px;
     cursor: pointer;
     color: #fff;
+    position: relative;
 }
 .container4 .timeContainer .selectScheduleTimeContainer .selectDeleteRtimeContainer .RtBtnBox button:hover{
-    background-color: #ffd700;
     font-weight: bold;
+}
+.container4 .timeContainer .selectScheduleTimeContainer .selectDeleteRtimeContainer .RtBtnBox button span{
+    color: red;
+    position: absolute;
+    right: 7px;
+    top: 3px;
+    display: none;
+} 
+.container4 .timeContainer .selectScheduleTimeContainer .selectDeleteRtimeContainer .RtBtnBox button:hover span{
+    display: block;
 }
 /* disabled된 삭제 버튼 */
 .container4 .timeContainer .selectScheduleTimeContainer .selectDeleteRtimeContainer .RtBtnBox button:disabled{
@@ -306,6 +316,7 @@
 }
 .container4 .timeContainer .selectScheduleTimeContainer .selectDeleteRtimeContainer .RtBtnBox button:disabled:hover{
     font-weight: normal;
+    border: none;
 }
 
 
@@ -335,7 +346,7 @@
     border-radius: 5px;
     width: 50px;
     height: 30px;
-    background-color: #f8a247;
+    background-color: #153448 ;
     cursor: pointer;
     color: #fff;
 }
