--- a/src/assets/css/mypage/reserve.css
+++ b/src/assets/css/mypage/reserve.css
@@ -119,6 +119,8 @@
     padding: 30px;
     margin-bottom: 30px;
 }
+
+
 /* 알림장 윗부분 */
 .mypageContainer .mpDiaryConfirmContainer .mpdcTop{
     border-bottom: 1px solid #237140;
@@ -128,6 +130,8 @@
     padding-bottom: 10px;
     margin-bottom: 30px;
 }
+
+
 .mypageContainer .mpDiaryConfirmContainer .mpdcTop h3{}
 .mypageContainer .mpDiaryConfirmContainer .mpdcTop a{
     font-weight: bold;
@@ -193,9 +197,13 @@
     margin-bottom: 30px;
 }
 
+
+
+
 /* 예약정보 */
 .reserveCheckForm .rcfInfo{
     margin-bottom: 20px;
+    /* display: flex; */
 }
 .reserveCheckForm .rcfInfo >div{
     display: flex;
@@ -329,4 +337,23 @@
 
 .reseerveContainer .modal-btn button:hover {
     cursor: pointer;
+}
+
+
+.reseerveContainer  .inputSearch {
+    /* background-color: red; */
+    text-align:end ;
+
+}
+.reseerveContainer  .inputSearch label{
+    font-size: 18px;
+    padding-right: 80px;
+}
+
+.reseerveContainer  .inputSearch input{
+    width: 200px;
+    padding: 10px;
+    font-size: 18px;
+    border: 1px solid #237140;
+    border-radius: 10px;
 }
