ㅇㅅ 카카오 로그인 창 띄우기

--- a/src/assets/css/manager/insertTime.css
+++ b/src/assets/css/manager/insertTime.css
@@ -318,6 +318,11 @@
     font-weight: normal;
     border: none;
 }
+.container4 .timeContainer .selectScheduleTimeContainer .selectDeleteRtimeContainer .RtBtnBox button:disabled:hover span{
+    font-weight: normal;
+    border: none;
+    display: none;
+}
 
 
 
