--- a/src/assets/css/mypage/reserve.css
+++ b/src/assets/css/mypage/reserve.css
@@ -208,11 +208,13 @@
 .reserveCheckForm .rcfInfo >div{
     /* display: flex; */
     margin: 10px 0;
+    width: 250px;
 }
 .reserveCheckForm .rcfInfo >div p:first-child{
     color: #237140;
     width: 90px;
     font-weight: bold;
+    padding: 5px 0 5px 0;
 }
 
 /* 결제금액 */
