--- a/src/assets/css/manager/diary.css
+++ b/src/assets/css/manager/diary.css
@@ -19,11 +19,12 @@
 
 /* 일지 컨테이너 */
 .diary-container {
-    border: 5px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
+    /* border: 5px solid hsl(37, 91%, 67%); 연한 노란색으로 변경 */
+    border: 5px solid #153448;
     display: flex; /* 요소들을 가로로 나란히 배치 */
     width: 1400px; /* 컨테이너 너비 */
     margin: 30px auto; /* 페이지 중앙 정렬 */
-    padding: 20px; /* 안쪽 여백 */
+    padding: 15px; /* 안쪽 여백 */
     background-color: #ffffff; /* 배경색 */
     border-radius: 10px; /* 테두리 반경 */
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
@@ -33,7 +34,8 @@
 .diary-left-box,
 .diary-right-box {
     margin: 10px; /* 페이지 중앙 정렬 */
-    border: 2px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
+    /* border: 2px solid hsl(37, 91%, 67%); 연한 노란색으로 변경 */
+    border: 4px solid #153448;
     width: 48%; /* 박스의 너비 */
     padding: 20px; /* 안쪽 여백 */
     background-color: #ffffff; /* 박스 배경색 */
@@ -54,10 +56,16 @@
 
 /* 라벨 */
 .diary-label {
-    font-weight: bold; /* 폰트 굵기 */
+    /* font-weight: bold; 폰트 굵기 */
     margin-bottom: 10px;
     margin-top: 10px; /* 위쪽 간격 추가 */
     display: inline-block; /* 라벨을 한 줄에 표시 */
+}
+
+/* 라벨 */
+.diary-label2 {
+     font-weight: bold; /*폰트 굵기 */
+     
 }
 .diary-input {
     width: 100%;
@@ -75,7 +83,8 @@
     margin-top: 5px; /* 위 여백 */
     margin-bottom: 20px; /* 아래 여백 */
     /* border: 1px solid #cccccc; 테두리 스타일 */
-    border: 2px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
+    /* border: 2px solid hsl(37, 91%, 67%); 연한 노란색으로 변경 */
+    border: 2px solid #153448;
     border-radius: 5px; /* 테두리 반경 */
     box-sizing: border-box; /* 너비와 높이에 패딩과 테두리를 포함 */
 }
@@ -109,7 +118,7 @@
     width: 100%; /* 버튼 너비 */
     padding: 10px; /* 안쪽 여백 */
     border: none; /* 테두리 없음 */
-    background-color: #237140; /* 배경색 */
+    background-color: #3C5B6F; /* 배경색 */
     border-radius: 5px;
     color: white; /* 글자색 */
     font: bolder;
@@ -117,26 +126,14 @@
     cursor: pointer; /* 포인터 커서 설정 */
     margin-top: 10px; /* 위 여백 */
 }
-/* .diary-save-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 20px;
-}
-
-.diary-save-button:hover {
-    background-color: #45a049;
-} */
 
 /* 버튼 호버 상태 */
 .diary-save-button:hover,
 .diary-edit-button:hover,
 .diary-send-button:hover {
-    background-color: #1d5e35; /* 배경색 변경 */
+    /* background-color: #1d5e35; 배경색 변경 */
+    background-color: #4c7590; /* 배경색 변경 */
+  
 }
 
 /* 취소 버튼 디자인 */
@@ -165,8 +162,9 @@
 
 /* 모달창 내용 */
 .diary-modal-content {
-    border: 5px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
-    background-color: #fefefe; /* 배경색 */
+    border: 5px solid #153448;
+    /* border: 5px solid hsl(37, 91%, 67%); 연한 노란색으로 변경 */
+    background-color: #fefefe;/* 배경색*/
     margin: 5% auto; /* 가운데 정렬 */
     padding: 20px; /* 안쪽 여백 */
     border-radius: 10px; /* 테두리 반경 */
@@ -332,24 +330,10 @@
     text-align: left;
 }
 
-/* .diary-edit-button, .diary-send-button {
-    background-color: #008CBA;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    margin: 10px;
-} */
 
 .diary-send-button {
-    background-color: #f39c12;
+    background-color: #3C5B6F;
 }
-
-/* .diary-edit-button:hover, .diary-send-button:hover {
-    background-color: #006fa1;
-} */
 
 .diary-image-container {
     display: flex;
