--- a/src/assets/css/manager/schedule.css
+++ b/src/assets/css/manager/schedule.css
@@ -11,10 +11,11 @@
     z-index: 1;
     /* FullCalendar 컴포넌트의 위에 표시 */
     margin: 20px auto;
-    max-width: 1400px;
+    width: 1150px;
     /* 더 작은 사이즈로 변경 */
     padding: 20px;
-    border: 5px solid hsl(37, 91%, 67%);
+    border: 5px solid #153448;
+    /* border: 5px solid hsl(37, 91%, 67%); */
     /* 연한 노란색으로 변경 */
     border-radius: 20px;
     /* 더 둥근 모양으로 변경 */
@@ -38,8 +39,9 @@
 
 /* FullCalendar의 이벤트 요소 스타일링 */
 .fc-event {
-    background-color: #f8a247;
-    /* 이벤트의 배경색을 노란색으로 변경 */
+    /* background-color: #f8a247; */
+    background-color: #81a9c4;
+    /* 이벤트의 배경색을 노란색으로 변경 3C5B6F*/
     border: none;
     /* 테두리 제거 */
     border-radius: 5px;
@@ -60,7 +62,8 @@
 
 /* FullCalendar의 오늘 날짜 스타일링 */
 .fc-day-today {
-    background-color: #f8a247;
+    background-color: #81a9c4;
+    /* background-color: #f8a247; */
     /* 오늘 날짜의 배경색을 노란색으로 변경 */
     /* border-radius: 20%; 둥근 모양으로 변경하여 강아지 모양으로 만듭니다. */
     color: #fff;
@@ -72,6 +75,7 @@
 /* FullCalendar의 버튼 스타일링 */
 .fc-button {
     background-color: #ffd700;
+   
     /* 버튼 배경색을 노란색으로 변경 */
     color: #333;
     /* 버튼 텍스트 색상을 어두운 회색으로 변경 */
@@ -90,6 +94,7 @@
 /* FullCalendar의 오늘 버튼 스타일링 */
 .fc-today-button {
     background-color: #ffd700;
+   
     /* 오늘 버튼 배경색을 노란색으로 변경 */
     color: #333;
     /* 텍스트 색상을 어두운 회색으로 변경 */
