--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -63,19 +63,19 @@ a.toReserveFrom{
     bottom: 120px;
     padding-top: 5px;
     /* border-radius: 10px; */
-    border-radius: 50px;
+    border-radius: 10px;
     color: #ffffff;
     text-align: center;
     width: 65px;
     height: 65px;
-    font-size: 50px;
+    font-size: 20px;
     font-weight: bold;
     background-color: rgba(0, 48, 36, 0.8);
     filter: alpha(opacity = 50);
     z-index: 999;
 }
-a.toReserveFrom .arrowUp{
-    content: "";
+a.toReserveFrom .goReForm{
+    /* content: "";
     display: block;
     width: 20px;
     height: 20px;
@@ -86,5 +86,5 @@ a.toReserveFrom .arrowUp{
     position: absolute;
     right: 22px;
     top: 34px;
-    margin-top: -7px;
+    margin-top: -7px; */
 }
