--- a/src/assets/css/headerFooter/mheader.css
+++ b/src/assets/css/headerFooter/mheader.css
@@ -42,9 +42,10 @@
     overflow: hidden;
 }
 .mheader .mheaderWrap .mheaderLeft .mlogo a img{
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     object-fit: contain;
+    display: flex;
 }
 .mheader .mheaderWrap .mheaderLeft .mMenu{
     display: flex;
